--- a/package.json
+++ b/package.json
@@ -9,16 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.4.1",
+    "@types/react-native": "^0.67.7",
+    "@types/react-redux": "7.1.5",
+		"@types/redux": "3.6.0",
+		"@types/redux-saga": "0.10.5",
     "expo": "~45.0.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "wretch": "1.7.1",
     "react-native": "0.68.2",
+    "native-base": "2.15.2",
+    "redux-saga": "1.1.3",
+    "react-native-responsive-fontsize": "0.5.0",
+    "react-native-responsive-screen": "1.4.1",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/react": "^18.0.12"
   },
   "private": true
 }
