--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "expo start --dev-client",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
+    "android": "react-native run-android",
+		"ios": "react-native run-ios",
+		"start": "react-native start",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -19,6 +19,7 @@
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-redux": "7.1.3",
     "wretch": "1.7.1",
     "react-native": "0.68.2",
     "native-base": "2.15.2",
